# Task-Manager

./: .gitignore  app.py  pyproject.toml  root.py
schemas/: user_schema.py
tests/: test_app.py  test_root.py
