[project]
name = 'task-manager'
version = '0.1.0'
description = 'Add your description here'
readme = 'README.md'
requires-python = '>=3.13'
dependencies = ['fastapi[standard]>=0.138.0']

[dependency-groups]
dev = ['pytest>=9.1.1', 'pytest-cov>=7.1.0', 'ruff>=0.15.18', 'taskipy>=1.14.1']

[tool.pytest.ini_options]
pythonpath = ['.']
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev .\app.py '
test = 'pytest --cov=. -vv'
post_test = 'coverage html'
